# ogl-learner

./: .gitignore  CMakeLists.txt  README.md
cmake/: compiler-options.cmake  dependencies.cmake
src/: main.cpp  renderer.cpp  shader.cpp  tetrahedron.cpp  window.cpp
src/examples/: tetrahedron_example.cpp
src/include/ogl-learner/: renderer.hpp  shader.hpp  tetrahedron.hpp  window.hpp
src/shaders/: tetrahedron.frag  tetrahedron.vert
tests/bdd/: renderer_steps.cpp  shader_steps.cpp
tests/unit/: renderer_test.cpp  shader_test.cpp
